5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1764_1580.log
== TEST (2019-05-29 20:27:10) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(eval(input()))

falta = 0
passou = 0
reprovou = 0
i = 0
while(i<size(vet1)):
	if(vtet[i]==(-1)):
		falta = falta + 1
	print(falta)
	elif(vet[i]>=6):
		passou = passou +1
	print(passou)
	elif(vet[i]<6):
		reprovou = reprovou + 1
	print(reprovou)
	
-- ERROR:
File "XXXX", line 14
    elif(vet[i]>=6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:27:53) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(eval(input()))

falta = 0
passou = 0
reprovou = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1
	print(falta)
	elif(vet1[i]>=6):
		passou = passou +1
	print(passou)
	elif(vet1[i]<6):
		reprovou = reprovou + 1
	print(reprovou)
	
-- ERROR:
File "XXXX", line 14
    elif(vet1[i]>=6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:28:36) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(eval(input()))

falta = 0
passou = 0
reprovou = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
	elif(vet1[i]<6):
		reprovou = reprovou + 1
	
print(falta)
print(passou)
print(reprovou)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:30:27) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
	elif(vet1[i]<6):
		reprovou = reprovou + 1
	
print(falta)
print(passou)
print(reprovou)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:31:15) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
	elif(vet1[i]<6):
		reprovou = reprovou + 1
	i = i + 1
print(falta)
print(passou)
print(reprovou)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:34:55) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(soma/ (reprovou+passou))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:02:08) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2)

-- ERROR:
File "XXXX", line 27
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:02:30) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:03:39) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(max(vet1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:04:13) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(max(vet1[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:07:10) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = vet2[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:08:31) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:09:05) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2(maior))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:10:29) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
		print("vet1",vet1[i])
		print(vet2[i])
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:10:38) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
		print("vet1",vet1[i])
		print(vet2[i])
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:11:27) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
		print("vet1",vet1[i])
		print(vet2[i])
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:11:44) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
		print("vet1",vet1[i])
		print(vet2[i])
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:12:08) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = i
		print("vet1",vet1[i])

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:13:46) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])

	
	i = i + 1
vet2[i] = max(vet1)
print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:15:10) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:16:07) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1(i))
		print(i)

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:16:38) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])
		print(i)

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:23) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])
		print(i)

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2[3])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:18:14) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])
		print(i)

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:18:52) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(input())

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])
		print(i)

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet1[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:19:48) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(eval(input()))

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		
		print("vet1",vet1[i])
		print(i)

	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(vet2[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:21:33) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(eval(input()))

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = vet2[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:21:51) 
-- CODE:
from numpy import *

vet1 = array(eval(input()))
vet2 = array(eval(input()))

falta = 0
passou = 0
reprovou = 0
soma = 0
i = 0
maior = max(vet1)
while(i<size(vet1)):
	if(vet1[i]==(-1)):
		falta = falta + 1	
	elif(vet1[i]>=6):
		passou = passou +1
		soma = soma + vet1[i]
	elif(vet1[i]<6):
		reprovou = reprovou + 1
		soma = soma + vet1[i]
	if(vet1[i]==maior):
		maior = vet2[i]
	
	i = i + 1

print(falta)
print(passou)
print(reprovou)
print(round(soma/ (reprovou+passou),2))
print(maior)
-- EXECUTION TIME:
0.522549
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
